--- a/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
+++ b/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
@@ -328,40 +328,42 @@
                                         </StackPanel>
                                     </StackPanel>
                                 </materialDesign:DialogHost.DialogContent>
-                                <Border BorderThickness="1" BorderBrush="{DynamicResource PrimaryHueMidBrush}"
+
+                                <Grid x:Name="_EDITABLE_TASK_CONTENT_AREA">
+                                    <Border BorderThickness="1" BorderBrush="{DynamicResource PrimaryHueMidBrush}"
                                     MinWidth="256" MinHeight="256" ClipToBounds="True">
-                                    <Grid>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="Auto" />
-                                            <RowDefinition Height="*" />
-                                            <RowDefinition Height="Auto" />
-                                        </Grid.RowDefinitions>
-                                        <TextBlock Text="COMMENTS"  Style="{StaticResource MaterialDesignTitleTextBlock}" Margin="8,8,8,16"/>
-                                        <ListView x:Name="_EDITABLE_COMMENTS_LISTVIEW" Grid.Row="1" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                                        <Grid>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto" />
+                                                <RowDefinition Height="*" />
+                                                <RowDefinition Height="Auto" />
+                                            </Grid.RowDefinitions>
+                                            <TextBlock Text="COMMENTS"  Style="{StaticResource MaterialDesignTitleTextBlock}" Margin="8,8,8,16"/>
+                                            <ListView x:Name="_EDITABLE_COMMENTS_LISTVIEW" Grid.Row="1" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                                           HorizontalContentAlignment="Stretch" >
-                                            <ListViewItem>
-                                                <Grid>
-                                                    <Grid.RowDefinitions>
-                                                        <RowDefinition Height="*"/>
-                                                        <RowDefinition Height="*"/>
-                                                        <RowDefinition Height="*"/>
-                                                        <RowDefinition Height="*"/>
-                                                        <RowDefinition Height="*" />
-                                                    </Grid.RowDefinitions>
+                                                <ListViewItem>
+                                                    <Grid>
+                                                        <Grid.RowDefinitions>
+                                                            <RowDefinition Height="*"/>
+                                                            <RowDefinition Height="*"/>
+                                                            <RowDefinition Height="*"/>
+                                                            <RowDefinition Height="*"/>
+                                                            <RowDefinition Height="*" />
+                                                        </Grid.RowDefinitions>
 
-                                                    <Grid.ColumnDefinitions>
-                                                        <ColumnDefinition Width="*" />
-                                                        <ColumnDefinition Width="Auto" />
-                                                    </Grid.ColumnDefinitions>
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="*" />
+                                                            <ColumnDefinition Width="Auto" />
+                                                        </Grid.ColumnDefinitions>
 
-                                                    <TextBlock Text="1.1" Padding="4 0 4 0" TextWrapping="Wrap"/>
-                                                    
-                                                    <!--#region Comentary-->
-                                                    <ComboBox Grid.Row="1" materialDesign:HintAssist.Hint="Type" materialDesign:HintAssist.IsFloating="True"  Margin="32 8 8 8">
-                                                        <ComboBoxItem>Note</ComboBoxItem>
-                                                        <ComboBoxItem>Comment</ComboBoxItem>
-                                                    </ComboBox>
-                                                    <TextBox Grid.Row="2" x:Name="CommenatryTextBox"
+                                                        <TextBlock Text="1.1" Padding="4 0 4 0" TextWrapping="Wrap"/>
+
+                                                        <!--#region Comentary-->
+                                                        <ComboBox Grid.Row="1" materialDesign:HintAssist.Hint="Type" materialDesign:HintAssist.IsFloating="True"  Margin="32 8 8 8">
+                                                            <ComboBoxItem>Note</ComboBoxItem>
+                                                            <ComboBoxItem>Comment</ComboBoxItem>
+                                                        </ComboBox>
+                                                        <TextBox Grid.Row="2" x:Name="CommenatryTextBox"
                                                                  TextWrapping="Wrap" VerticalAlignment="Stretch" Margin="32 8 8 8"
                                                                  MinWidth="280"
                                                                  AcceptsReturn="True"                 
@@ -370,59 +372,60 @@
                                                                  materialDesign:HintAssist.Hint="Write note or task item"
                                                                  Text="Note or task item"
                                                                  />
-                                                    <DatePicker Grid.Row="3" x:Name="ReminderDatePicker" HorizontalAlignment="Stretch" Margin="32 8 8 8"
+                                                        <DatePicker Grid.Row="3" x:Name="ReminderDatePicker" HorizontalAlignment="Stretch" Margin="32 8 8 8"
                                                                 materialDesign:HintAssist.Hint="Reminder Action Date">
-                                                        <!--<DatePicker.SelectedDate>
+                                                            <!--<DatePicker.SelectedDate>
                                                             <Binding Path="ReminderDate" UpdateSourceTrigger="PropertyChanged">
                                                                 <Binding.ValidationRules>
                                                                     <validation:SimpleDateValidationRule ValidatesOnTargetUpdated="True" />
                                                                 </Binding.ValidationRules>
                                                             </Binding>
                                                         </DatePicker.SelectedDate>-->
-                                                    </DatePicker>
-                                                    <!--#endregion-->
-                                                    
-                                                    <StackPanel HorizontalAlignment="Right" Grid.Row="4" Orientation="Horizontal" Margin="8">
-                                                        <StackPanel.Resources>
-                                                            <ResourceDictionary>
-                                                                <ResourceDictionary.MergedDictionaries>
-                                                                    <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Popupbox.xaml" />
-                                                                </ResourceDictionary.MergedDictionaries>
-                                                            </ResourceDictionary>
-                                                        </StackPanel.Resources>
-                                                        <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0"
+                                                        </DatePicker>
+                                                        <!--#endregion-->
+
+                                                        <StackPanel HorizontalAlignment="Right" Grid.Row="4" Orientation="Horizontal" Margin="8">
+                                                            <StackPanel.Resources>
+                                                                <ResourceDictionary>
+                                                                    <ResourceDictionary.MergedDictionaries>
+                                                                        <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Popupbox.xaml" />
+                                                                    </ResourceDictionary.MergedDictionaries>
+                                                                </ResourceDictionary>
+                                                            </StackPanel.Resources>
+                                                            <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0"
                                                             materialDesign:RippleAssist.IsCentered="True">
-                                                            <materialDesign:PackIcon Kind="ShareVariant" />
-                                                        </Button>
-                                                        <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0"
+                                                                <materialDesign:PackIcon Kind="ShareVariant" />
+                                                            </Button>
+                                                            <Button Style="{StaticResource MaterialDesignToolButton}" Width="30" Padding="2 0 2 0"
                                                             materialDesign:RippleAssist.IsCentered="True">
-                                                            <materialDesign:PackIcon Kind="Heart" />
-                                                        </Button>
-                                                        <materialDesign:PopupBox Style="{StaticResource MaterialDesignToolPopupBox}" Padding="2 0 2 0">
-                                                            <StackPanel>
-                                                                <Button Content="More"/>
-                                                                <Button Content="Options"/>
-                                                            </StackPanel>
-                                                        </materialDesign:PopupBox>
-                                                    </StackPanel>
-                                                </Grid>
-                                            </ListViewItem>
-                                        </ListView>
-                                        <materialDesign:ColorZone Mode="PrimaryMid" Grid.Row="2" Effect="{DynamicResource MaterialDesignShadowDepth5}">
-                                            <TextBlock Margin="16">Task editor footer</TextBlock>
-                                        </materialDesign:ColorZone>
-                                        <Button Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}"                                
+                                                                <materialDesign:PackIcon Kind="Heart" />
+                                                            </Button>
+                                                            <materialDesign:PopupBox Style="{StaticResource MaterialDesignToolPopupBox}" Padding="2 0 2 0">
+                                                                <StackPanel>
+                                                                    <Button Content="More"/>
+                                                                    <Button Content="Options"/>
+                                                                </StackPanel>
+                                                            </materialDesign:PopupBox>
+                                                        </StackPanel>
+                                                    </Grid>
+                                                </ListViewItem>
+                                            </ListView>
+                                            <materialDesign:ColorZone Mode="PrimaryMid" Grid.Row="2" Effect="{DynamicResource MaterialDesignShadowDepth5}">
+                                                <TextBlock Margin="16">Task editor footer</TextBlock>
+                                            </materialDesign:ColorZone>
+                                            <Button Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}"                                
                                                 Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}"
                                                 VerticalAlignment="Bottom" HorizontalAlignment="Right" 
                                                 Grid.Row="1" Margin="0 0 28 -20">
-                                            <Viewbox Width="22" Height="22">
-                                                <Canvas Width="24" Height="24">
-                                                    <Path Data="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" Fill="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Button}, Path=Foreground}" />
-                                                </Canvas>
-                                            </Viewbox>
-                                        </Button>
-                                    </Grid>
-                                </Border>
+                                                <Viewbox Width="22" Height="22">
+                                                    <Canvas Width="24" Height="24">
+                                                        <Path Data="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" Fill="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Button}, Path=Foreground}" />
+                                                    </Canvas>
+                                                </Viewbox>
+                                            </Button>
+                                        </Grid>
+                                    </Border>
+                                </Grid>
                             </materialDesign:DialogHost>
                             <!--#endregion -->
                         </Grid>
