--- a/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
+++ b/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
@@ -478,39 +478,40 @@
         </Grid>
       </TabItem>
     </TabControl>
-
-    <Grid Grid.Row="2"
+    <materialDesign:PopupBox Grid.Row="1"
+                                     Style="{StaticResource MaterialDesignMultiFloatingActionPopupBox}"
+                                     PlacementMode="LeftAndAlignMiddles"
+                                     UnfurlOrientation="Horizontal"
+                                     ToolTip="Manage items"
+                                     Margin="0 0 0 -24"
+                                     HorizontalAlignment="Center" VerticalAlignment="Bottom">
+            <StackPanel Orientation="Horizontal">
+                <Button ToolTip="Add an item"
+                            Command="{Binding Factory.StartAsyncCommand}">
+                    <Path Data="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
+                              Stretch="Uniform"
+                              Width="15" Height="15"
+                              Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}"/>
+                </Button>
+                <Button ToolTip="Remove selected item"
+                            Command="{Binding Factory.StartAsyncCommand}">
+                    <Path Data="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
+                              Stretch="Uniform"
+                              Width="15" Height="15"
+                              Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}"/>
+                </Button>
+            </StackPanel>
+        </materialDesign:PopupBox>
+        <Grid Grid.Row="2" MinHeight="56"
        >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
+            <!--Command="{Binding Factory.StartAsyncCommand}"-->
+
             
-            <materialDesign:PopupBox Grid.Column="1"
-                                     Style="{StaticResource MaterialDesignMultiFloatingActionPopupBox}"
-                                     PlacementMode="LeftAndAlignMiddles"
-                                     UnfurlOrientation="Horizontal"
-                                     ToolTip="Manage items"
-                                     Margin="10 10 10 10"
-                                     HorizontalAlignment="Center" VerticalAlignment="Center">
-                <StackPanel Orientation="Horizontal">
-                    <Button ToolTip="Add an item"
-                            Command="{Binding Factory.StartAsyncCommand}">
-                        <Path Data="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
-                              Stretch="Uniform"
-                              Width="15" Height="15"
-                              Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}"/>
-                    </Button>
-                    <Button ToolTip="Remove selected item"
-                            Command="{Binding Factory.StartAsyncCommand}">
-                        <Path Data="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
-                              Stretch="Uniform"
-                              Width="15" Height="15"
-                              Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}"/>
-                    </Button>
-                </StackPanel>
-            </materialDesign:PopupBox>
         </Grid>
   </Grid>
 </Window>
